Wdrożenie podstawowej funkcjonalności logowania
